// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule element-name configured with custom pattern smoketest 1`] = `
Array [
  Object {
    "errorCount": 3,
    "filePath": "test-files/rules/element-name.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 27,
        "message": "<spam-ham> is not a valid element name",
        "offset": 319,
        "ruleId": "element-name",
        "selector": "spam-ham",
        "severity": 2,
        "size": 8,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 30,
        "message": "<foo> is not a valid element name",
        "offset": 372,
        "ruleId": "element-name",
        "selector": "foo",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 31,
        "message": "<1-bar> is not a valid element name",
        "offset": 384,
        "ruleId": "element-name",
        "selector": "1-bar",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<!-- builtin -->
<div></div>
<table>
	<thead>
		<tr>
			<th>foo</th>
			<th>bar</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td>1</td>
			<td>2</td>
		</tr>
		<tr>
			<td>3</td>
			<td>4</td>
		</tr>
	</tbody>
</table>

<!-- xml namespace -->
<xi:include></xi:include>

<!-- allowed custom names -->
<foo-bar></foo-bar>
<spam-ham></spam-ham>

<!-- invalid custom names -->
<foo></foo>
<1-bar></1-bar>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-name configured with default pattern smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/element-name.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 30,
        "message": "<foo> is not a valid element name",
        "offset": 372,
        "ruleId": "element-name",
        "selector": "foo",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 31,
        "message": "<1-bar> is not a valid element name",
        "offset": 384,
        "ruleId": "element-name",
        "selector": "1-bar",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<!-- builtin -->
<div></div>
<table>
	<thead>
		<tr>
			<th>foo</th>
			<th>bar</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td>1</td>
			<td>2</td>
		</tr>
		<tr>
			<td>3</td>
			<td>4</td>
		</tr>
	</tbody>
</table>

<!-- xml namespace -->
<xi:include></xi:include>

<!-- allowed custom names -->
<foo-bar></foo-bar>
<spam-ham></spam-ham>

<!-- invalid custom names -->
<foo></foo>
<1-bar></1-bar>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-name should contain documentation 1`] = `
Object {
  "description": "HTML defines what content is considered a valid (custom) element name.",
  "url": "https://html-validate.org/rules/element-name.html",
}
`;
